force-app/main/default/objects/Parts_Inventory__c/Parts_Inventory__c.object-meta.xml
<CustomObject>
    <label>Parts Inventory</label>
    <nameField>
        <label>Parts Inventory Name</label>
        <type>AutoNumber</type>
        <displayFormat>INV-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Parts Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>