force-app/main/default/objects/Parts_Inventory__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Electrical</fullName></value><value><fullName>Mechanical</fullName></value><value><fullName>HVAC</fullName></value><value><fullName>Plumbing</fullName></value><value><fullName>Filters</fullName></value><value><fullName>Lubricants</fullName></value><value><fullName>Fasteners</fullName></value><value><fullName>Other</fullName></value></valueSetDefinition></valueSet>
</CustomField>