force-app/main/default/objects/Parts_Inventory__c/fields/Last_Restocked__c.field-meta.xml
<CustomField>
    <fullName>Last_Restocked__c</fullName>
    <label>Last Restocked</label>
    <type>Date</type>
</CustomField>