force-app/main/default/objects/Parts_Inventory__c/fields/Minimum_Stock__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Stock__c</fullName>
    <label>Minimum Stock</label>
    <type>Number</type>
    <precision>6</precision><scale>0</scale><defaultValue>2</defaultValue>
</CustomField>