force-app/main/default/objects/Parts_Inventory__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <label>Part Number</label>
    <type>Text</type>
    <length>50</length><externalId>true</externalId>
</CustomField>