force-app/main/default/objects/Parts_Inventory__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <type>Number</type>
    <precision>6</precision><scale>0</scale><defaultValue>0</defaultValue>
</CustomField>