force-app/main/default/objects/Parts_Inventory__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>In Stock</fullName><default>true</default></value><value><fullName>Low Stock</fullName></value><value><fullName>Out of Stock</fullName></value></valueSetDefinition></valueSet>
</CustomField>