force-app/main/default/objects/Parts_Inventory__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <type>Text</type>
    <length>100</length>
</CustomField>