force-app/main/default/objects/Parts_Inventory__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <label>Technician</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo><relationshipName
  >Van_Inventory</relationshipName>
</CustomField>