force-app/main/default/objects/Parts_Inventory__c/fields/Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost__c</fullName>
    <label>Unit Cost</label>
    <type>Currency</type>
    <precision>10</precision><scale>2</scale>
</CustomField>