force-app/main/default/objects/Parts_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Part_Number__c</columns>
    <columns>Part_Name__c</columns>
    <columns>Category__c</columns>
    <columns>Quantity__c</columns>
    <columns>Minimum_Stock__c</columns>
    <columns>Unit_Cost__c</columns>
    <columns>Status__c</columns>
    <columns>Supplier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Parts Inventory</label>
</ListView>