force-app/main/default/objects/Parts_Inventory__c/listViews/Low_Stock_Parts.listView-meta.xml
<ListView>
    <fullName>Low_Stock_Parts</fullName>
    <columns>NAME</columns>
    <columns>Part_Number__c</columns>
    <columns>Part_Name__c</columns>
    <columns>Category__c</columns>
    <columns>Quantity__c</columns>
    <columns>Minimum_Stock__c</columns>
    <columns>Status__c</columns>
    <columns>Supplier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Low Stock,Out of Stock</value>
    </filters>
    <label>Low Stock / Out of Stock Parts</label>
</ListView>